@@ -4,6 +4,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 logfile
+nohup.out
 
 venv
 venv3
