@@ -53,7 +53,7 @@ remote_log_conn_id = aws_s3_logs
 google_key_path =
 remote_base_log_folder =
 encrypt_s3_logs = False
-logging_level = DEBUG
+logging_level = INFO
 fab_logging_level = WARN
 logging_config_class =
 colored_console_log = True
@@ -126,7 +126,7 @@ worker_refresh_batch_size = 1
 worker_refresh_interval = 30
 reload_on_plugin_change = False
 secret_key =  iSvzDgIphcno/mqkiT9mqJLtsBg0LKSf
-workers = 4
+workers = 1
 worker_class = sync
 access_logfile = -
 error_logfile = -
@@ -136,7 +136,7 @@ expose_hostname = True
 expose_stacktrace = True
 dag_default_view = grid
 dag_orientation = LR
-demo_mode = False
+demo_mode = True
 log_fetch_timeout_sec = 5
 log_fetch_delay_sec = 2
 log_auto_tailing_offset = 30
@@ -281,7 +281,7 @@ shards = 5
 sensors_enabled = NamedHivePartitionSensor
 
 [mesos]
-mesos_ssl = False
+mesos_ssl = True
 master = localhost:5050
 framework_name = Airflow
 checkpoint = True
@@ -290,8 +290,8 @@ command_shell = True
 task_cpu = 0.1
 task_memory = 500
 authenticate = False
-default_principal = 
-default_secret = 
+default_principal = mesos
+default_secret = test
 docker_image_slave = docker.io/avhost/docker-airflow:latest
 docker_volume_driver = local
 docker_volume_dag_name = airflowdags
