@@ -6,6 +6,8 @@
 - Add: Decline all outstanding offers if there are no tasks in queue
 - Fix: "object has no attribute execution_date"
 - API Add: Add api call to get out all queued tasks 
+- Fix: ISSUE-4
+- Add: decline RefuseSeconds to give other frameworks the chance to get offers
 
 ## v0.1.4
 
